Update version and got tutorial working for different scenarios

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -564,7 +564,7 @@
   "memoryTutorialFreeUploadCameraUploadClothing": "The little things matter.\nCapture them now, find them later.",
   "memoryTutorialFreePhotoLibraryUploadClothing": "You’ve saved the moments—now sort the memories.\nOne tap brings each piece into their story.",
   "memoryTutorialFreeEditCameraDeclutterItems": "They’re growing.\nSo are the stories behind what they wore.",
-  "memoryTutorialFreeCreateOutfitCreateOutfitProcess": "One outfit. One day. One memory.\nSnap it. Note it. Feel it again tomorrow.",
+  "memoryTutorialFreeCreateOutfitProcess": "One outfit. One day. One memory.\nSnap it. Note it. Feel it again tomorrow.",
   "memoryTutorialPaidFilterFindInCloset": "Life moves fast.\nTheir closet keeps up.\nFind what you need—right when you need it.",
   "memoryTutorialPaidCustomizeViewAllItems": "Your closet, your way.\nZoom in. Sort by love.\nOne tap brings it all back.",
   "memoryTutorialPaidMultiClosetCreateCapsule": "Some closets hold the past.\nSome, the present.\nAll of them—pieces of your story.",
@@ -613,6 +613,17 @@
   "memoryAchievementNoNewClothes90Message": "90 days cherishing your wardrobe memories. Every piece worn carries a precious story.",
   "memoryAchievementNoNewClothes90Title": "90 Days of Moments!",
 
+  "personalStyleTutorialFreeUploadCameraUploadClothing": "Start identifying your personal style by uploading pieces you already wear. Each piece tells a story about your taste.",
+  "personalStyleTutorialFreePhotoLibraryUploadClothing": "Upload up to 5 items at once to quickly surface what reflects your style.",
+  "personalStyleTutorialFreeEditCameraDeclutterItems": "Remove what doesn’t align with your evolving style. It’s not just about less—it’s about the *right* items.",
+  "personalStyleTutorialFreeCreateOutfitProcess": "Put your pieces together to see what looks like ‘you’. We’re building your signature style.",
+  "personalStyleTutorialPaidFilterFindInCloset": "Find pieces that match your vibe today. Use filters to spot hidden gems.",
+  "personalStyleTutorialPaidCustomizeViewAllItems": "Visualize your wardrobe in different ways to surface forgotten favorites.",
+  "personalStyleTutorialPaidMultiClosetCreateCapsule": "Create style capsules for different parts of your identity—work, weekend, or wild.",
+  "personalStyleTutorialPaidCalendarTrackFirstExperiences": "Track your outfits to discover which ones feel most like ‘you’.",
+  "personalStyleTutorialPaidUsageAnalyticsCostPerWear": "See what you're actually wearing—your style speaks through repetition.",
+  "personalStyleTutorialClosetUploaded": "Track your streaks and unlock features—just by using what you already own.",
+  "personalStyleScenarioTutorial": "You’re not starting from scratch. Your closet already has clues. Let’s figure out your personal style.",
   "personalStyleTrialFilter": "Narrow your closet by name, item type to define your unique look.",
   "personalStyleTrialCustomize": "Reorganize your layout to reflect what feels like you right now.",
   "personalStyleTrialClosets": "Make themed closets that mirror your personal aesthetic.",
@@ -654,6 +665,17 @@
   "personalStyleAchievementNoNewClothes90Message": "You've styled yourself confidently for 90 days using what you own—your personal style is thriving!",
   "personalStyleAchievementNoNewClothes90Title": "90 Days Confident!",
 
+  "lifeChangeTutorialFreeUploadCameraUploadClothing": "Start fresh by uploading what’s still with you. Your style can shift—and so can you.",
+  "lifeChangeTutorialFreePhotoLibraryUploadClothing": "Quickly upload what you’ve worn recently to reflect your current reality.",
+  "lifeChangeTutorialFreeEditCameraDeclutterItems": "Let go of what no longer fits your life. Keep what supports who you are now.",
+  "lifeChangeTutorialFreeCreateOutfitProcess": "Try on combinations that meet you where you are today. Feel grounded in your choices.",
+  "lifeChangeTutorialPaidFilterFindInCloset": "Filter your wardrobe to find what works for this season of your life.",
+  "lifeChangeTutorialPaidCustomizeViewAllItems": "See your wardrobe in a new light. Sometimes a new view brings clarity.",
+  "lifeChangeTutorialPaidMultiClosetCreateCapsule": "Create closets that fit different aspects of your life—work, home, change, or celebration.",
+  "lifeChangeTutorialPaidCalendarTrackFirstExperiences": "Track outfits during new beginnings. These memories matter.",
+  "lifeChangeTutorialPaidUsageAnalyticsCostPerWear": "See what you’re reaching for now. It’s okay if your go-tos have changed.",
+  "lifeChangeTutorialClosetUploaded": "This is your reset. Use what you already have to adapt, feel at home, and move forward.",
+  "lifeChangeScenarioTutorial": "Big changes affect how you dress and feel. Let’s shape a wardrobe that supports where you are now.",
   "lifeChangeTrialFilter": "Quickly find what suits your new routines, roles, and realities.",
   "lifeChangeTrialCustomize": "Update your closet layout to fit what matters today.",
   "lifeChangeTrialClosets": "Create closets for transitions—travel, work, motherhood, or pause.",
