--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -564,7 +564,7 @@
   "memoryTutorialFreeUploadCameraUploadClothing": "细节很重要。\n现在拍下，以后好找。",
   "memoryTutorialFreePhotoLibraryUploadClothing": "你已经留下了这些瞬间——现在是时候整理记忆了。\n轻轻一点，每件衣物都能找到自己的故事。",
   "memoryTutorialFreeEditCameraDeclutterItems": "他们在成长，\n那些穿过的衣物背后，也有成长的故事。",
-  "memoryTutorialFreeCreateOutfitCreateOutfitProcess": "一套穿搭，一天回忆。\n拍下来，写下来，明天再感受一次。",
+  "memoryTutorialFreeCreateOutfitProcess": "一套穿搭，一天回忆。\n拍下来，写下来，明天再感受一次。",
   "memoryTutorialPaidFilterFindInCloset": "生活节奏飞快，\n他们的衣橱也能跟上。\n需要什么，随时找到。",
   "memoryTutorialPaidCustomizeViewAllItems": "你的衣橱，由你掌控。\n放大查看，按喜爱排序。\n一点，就唤起所有回忆。",
   "memoryTutorialPaidMultiClosetCreateCapsule": "有的衣橱收藏着过去，\n有的属于现在。\n它们都记录着你的故事。",
@@ -613,6 +613,17 @@
   "memoryAchievementNoNewClothes1980Message": "1,980 天通过衣物珍藏回忆。你的衣柜讲述着一段美丽而动人的故事。",
   "memoryAchievementNoNewClothes1980Title": "回忆传奇！",
 
+  "personalStyleTutorialFreeUploadCameraUploadClothing": "从上传你常穿的衣服开始，找出你的个人风格。每一件都反映了你的品味。",
+  "personalStyleTutorialFreePhotoLibraryUploadClothing": "一次上传最多 5 件衣服，快速看出哪些符合你的风格。",
+  "personalStyleTutorialFreeEditCameraDeclutterItems": "清理不再适合你风格的衣服。不是越少越好，而是越对越好。",
+  "personalStyleTutorialFreeCreateOutfitProcess": "组合衣服，看看什么最像你。一起打造属于你的风格标志。",
+  "personalStyleTutorialPaidFilterFindInCloset": "用筛选器找到符合你今天感觉的衣服。你会发现许多被忽视的宝藏。",
+  "personalStyleTutorialPaidCustomizeViewAllItems": "以不同视角查看衣橱，重新发现你喜欢却遗忘的单品。",
+  "personalStyleTutorialPaidMultiClosetCreateCapsule": "为生活的不同面貌创建风格胶囊——上班、周末，或是尽情玩乐。",
+  "personalStyleTutorialPaidCalendarTrackFirstExperiences": "记录每日穿搭，找出最像你的那一套。",
+  "personalStyleTutorialPaidUsageAnalyticsCostPerWear": "看看你真正常穿的是什么——风格藏在重复里。",
+  "personalStyleTutorialClosetUploaded": "只用你已有的衣服，就能积累天数、解锁功能。",
+  "personalStyleScenarioTutorial": "你不是从零开始。你的衣橱里已经藏着线索。一起找出你的个人风格。",
   "personalStyleTrialFilter": "按名称、类型筛选衣物，定义你的独特风格。",
   "personalStyleTrialCustomize": "重新布局，让衣橱更符合当下的你。",
   "personalStyleTrialClosets": "建立与你风格相符的主题衣橱。",
@@ -654,6 +665,17 @@
   "personalStyleAchievementNoNewClothes1980Message": "1,980 天通过穿搭体现独特个性。你正在重新定义自信穿衣的意义。",
   "personalStyleAchievementNoNewClothes1980Title": "个人风格巅峰！",
 
+  "lifeChangeTutorialFreeUploadCameraUploadClothing": "上传那些还陪在你身边的衣物，重新出发。风格会变，你也一样。",
+  "lifeChangeTutorialFreePhotoLibraryUploadClothing": "快速上传你最近穿的衣物，反映你当下的状态。",
+  "lifeChangeTutorialFreeEditCameraDeclutterItems": "放下那些已不再适合你生活的物品。保留真正支持你的衣服。",
+  "lifeChangeTutorialFreeCreateOutfitProcess": "尝试新的穿搭组合，适应你现在的生活。让选择成为一种安定感。",
+  "lifeChangeTutorialPaidFilterFindInCloset": "用筛选器找到适合你这个人生阶段的衣物。",
+  "lifeChangeTutorialPaidCustomizeViewAllItems": "用新的角度看待衣橱。有时换个视角，就能看清方向。",
+  "lifeChangeTutorialPaidMultiClosetCreateCapsule": "为生活的不同面向建立专属衣橱——工作、家庭、变化，或是庆祝。",
+  "lifeChangeTutorialPaidCalendarTrackFirstExperiences": "记录那些新的开始。这些时刻值得被记住。",
+  "lifeChangeTutorialPaidUsageAnalyticsCostPerWear": "看看你现在常穿的是什么。喜好会变，这很正常。",
+  "lifeChangeTutorialClosetUploaded": "这是一次重启。用你已有的衣物，适应生活、找到归属、继续前行。",
+  "lifeChangeScenarioTutorial": "生活的变化会影响你的穿衣与感受。让我们一起打造一个支持你现在阶段的衣橱。",
   "lifeChangeTrialFilter": "快速找到适合你新生活节奏的穿搭选择。",
   "lifeChangeTrialCustomize": "调整衣橱布局，让你专注当下所需。",
   "lifeChangeTrialClosets": "为人生过渡期设立专属衣橱——如旅行、工作、育儿或休整。",
