Updated the FAB issue, and also address some S.of(Context), also figured out some navigation solutions to make more sense

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -220,7 +220,7 @@
   "like": "Love it!\n😍",
   "alright": "Not sure\n🤷‍♀️",
   "dislike": "Not quite\nmy vibe 🤔",
-  "selfie": "Selfie",
+  "selfie": "OOTD",
   "share": "Share",
   "OutfitReview": "Outfit Review",
   "shareFeatureTitle": "Effortless Outfit Sharing",
@@ -255,7 +255,7 @@
   "permission_needed": "This permission is\nrequired for the app\nto function properly.",
   "camera_upload_item_permission_explanation": "We need camera access to help you upload photos of your clothes.",
   "camera_edit_item_permission_explanation": "Let us use your camera to update your item photos.",
-  "camera_selfie_permission_explanation": "We need access to your camera for your stunning outfit selfies!",
+  "camera_selfie_permission_explanation": "We need access to your camera for your stunning outfit!",
   "camera_permission_explanation": "Camera access is required to take photos.",
   "photo_library_permission_explanation": "We need access to your photo library so you can select and upload your favorite outfits.",
   "notification_permission_explanation": "We use notifications to gently remind you to upload items or create outfits. No spam, just a little nudge when it matters.",
@@ -285,12 +285,12 @@
   "editItemSilverDescription": "Edit 700 more item images and elevate your closet game!",
   "editItemGoldTitle": "Gold Plan - Edit Item Images",
   "editItemGoldDescription": "Unlimited image edits! Keep refining your closet to perfection.",
-  "selfieBronzeTitle": "Bronze Plan - Selfie",
-  "selfieBronzeDescription": "Take 200 more selfies and keep your style on point!",
-  "selfieSilverTitle": "Silver Plan - Selfie",
-  "selfieSilverDescription": "Take 700 more selfies and show off your fashion progress!",
-  "selfieGoldTitle": "Gold Plan - Selfie",
-  "selfieGoldDescription": "Unlimited selfies! Capture your looks whenever inspiration strikes.",
+  "selfieBronzeTitle": "Bronze Plan - OOTD",
+  "selfieBronzeDescription": "Take 200 more OOTD and keep your style on point!",
+  "selfieSilverTitle": "Silver Plan - OOTD",
+  "selfieSilverDescription": "Take 700 more OOTD and show off your fashion progress!",
+  "selfieGoldTitle": "Gold Plan - OOTD",
+  "selfieGoldDescription": "Unlimited OOTD! Capture your looks whenever inspiration strikes.",
   "editClosetBronzeTitle": "Bronze Plan - Edit Closet Images",
   "editClosetBronzeDescription": "Update and edit up to 200 closet photos to keep your digital closet organized and stylish.",
   "editClosetSilverTitle": "Silver Plan - Edit Closet Images",
@@ -442,7 +442,8 @@
   "analyticsSummary": "You have created {totalReviews} outfits in the last {daysTracked} days in {closetShown}.",
   "summaryItemAnalytics": "Item\nInsights",
   "summaryOutfitAnalytics": "Outfit Insights",
-  "relatedOutfits": "Related Outfits",
+  "relatedOutfitsToAboveItem": "Related Outfits to above Item",
+  "relatedOutfitsToAboveOutfit": "Related Outfits to above Outfit",
   "noRelatedOutfitsItem": "No related outfits reviewed yet.\n\nTry styling this outfit differently!",
   "noRelatedOutfits": "No related outfits reviewed yet.\n\nTry styling any of the above outfit items to create another outfit!",
   "createOutfit": "Create Outfit",
@@ -521,6 +522,8 @@
   "scenarioTutorials": "Scenario Tutorials",
   "reminderDialogTitle": "Remind Me Later",
   "reminderDialogContent": "Would you like me to remind you later to upload your closet?",
+  "showMore": "Show More",
+  "showLess": "Show Less",
 
   "tutorialFreePhotoLibraryTitle": "Upload from Photo Library",
   "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
@@ -542,8 +545,8 @@
   "defaultAchievementFirstItemUploadTitle": "Item Initiator!",
   "defaultAchievementFirstOutfitCreatedMessage": "Your first outfit is ready! You're on your way to mastering your style.",
   "defaultAchievementFirstOutfitCreatedTitle": "Outfit Architect!",
-  "defaultAchievementFirstSelfieTakenMessage": "You’ve taken your first selfie! Show off your style and let your closet shine!",
-  "defaultAchievementFirstSelfieTakenTitle": "Selfie Superstar!",
+  "defaultAchievementFirstSelfieTakenMessage": "You’ve taken your first OOTD! Show off your style and let your closet shine!",
+  "defaultAchievementFirstSelfieTakenTitle": "OOTD Superstar!",
   "defaultAchievementNoNewClothes1215Message": "1,215 days of intentional living! Your journey is inspiring others to follow in your footsteps.",
   "defaultAchievementNoNewClothes1215Title": "Icon of Sustainability!",
   "defaultAchievementNoNewClothes1575Message": "1,575 days of embracing what you have. You're rewriting the rules of fashion!",
@@ -594,7 +597,7 @@
   "memoryAchievementFirstItemUploadTitle": "Memory Preserved!",
   "memoryAchievementFirstOutfitCreatedMessage": "Your first outfit saved—a moment you'll cherish forever.",
   "memoryAchievementFirstOutfitCreatedTitle": "Milestone Marked!",
-  "memoryAchievementFirstSelfieTakenMessage": "First selfie taken—holding onto memories one picture at a time.",
+  "memoryAchievementFirstSelfieTakenMessage": "First OOTD taken—holding onto memories one picture at a time.",
   "memoryAchievementFirstSelfieTakenTitle": "Moment Captured!",
   "memoryAchievementNoNewClothes1215Message": "1,215 days preserving the stories held by each outfit. Your closet is a living scrapbook of memories.",
   "memoryAchievementNoNewClothes1215Title": "Guardian of Moments!",
@@ -646,7 +649,7 @@
   "personalStyleAchievementFirstItemUploadTitle": "Confidence Unlocked!",
   "personalStyleAchievementFirstOutfitCreatedMessage": "Your first outfit is crafted. Revisit this look to feel great anytime.",
   "personalStyleAchievementFirstOutfitCreatedTitle": "Signature Look Set!",
-  "personalStyleAchievementFirstSelfieTakenMessage": "Your first selfie captured! Celebrate your style journey.",
+  "personalStyleAchievementFirstSelfieTakenMessage": "Your first OOTD captured! Celebrate your style journey.",
   "personalStyleAchievementFirstSelfieTakenTitle": "Own Your Style!",
   "personalStyleAchievementNoNewClothes1215Message": "1,215 days proving true style is timeless! You're a role model of authentic self-expression.",
   "personalStyleAchievementNoNewClothes1215Title": "Legendary Style!",
@@ -698,7 +701,7 @@
   "lifeChangeAchievementFirstItemUploadTitle": "New Chapter Begins!",
   "lifeChangeAchievementFirstOutfitCreatedMessage": "Your first outfit recorded—perfect for embracing your new phase.",
   "lifeChangeAchievementFirstOutfitCreatedTitle": "Transition Tracked!",
-  "lifeChangeAchievementFirstSelfieTakenMessage": "Your first selfie marks this moment—reflecting your evolving story.",
+  "lifeChangeAchievementFirstSelfieTakenMessage": "Your first OOTD marks this moment—reflecting your evolving story.",
   "lifeChangeAchievementFirstSelfieTakenTitle": "Change Documented!",
   "lifeChangeAchievementNoNewClothes1215Message": "1,215 days crafting your wardrobe to fit life's transformations. Your adaptability inspires!",
   "lifeChangeAchievementNoNewClothes1215Title": "Architect of Change!",
