--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -220,7 +220,7 @@
   "like": "爱它！😍",
   "alright": "不确定\n🤷‍♀️",
   "dislike": "不太适合我 🤔",
-  "selfie": "自拍",
+  "selfie": "今日穿搭",
   "share": "分享",
   "OutfitReview": "造型评论",
   "shareFeatureTitle": "轻松分享造型",
@@ -285,12 +285,12 @@
   "editItemSilverDescription": "再编辑700件物品图片，提升您的衣橱品味！",
   "editItemGoldTitle": "金计划 - 编辑物品图片",
   "editItemGoldDescription": "无限图片编辑！不断优化您的衣橱。",
-  "selfieBronzeTitle": "铜计划 - 自拍",
-  "selfieBronzeDescription": "再拍200张自拍，保持您的风格！",
-  "selfieSilverTitle": "银计划 - 自拍",
-  "selfieSilverDescription": "再拍700张自拍，展示您的时尚进步！",
-  "selfieGoldTitle": "金计划 - 自拍",
-  "selfieGoldDescription": "无限自拍！当灵感来临时，随时记录您的造型。",
+  "selfieBronzeTitle": "铜计划 - 今日穿搭",
+  "selfieBronzeDescription": "再拍200张今日穿搭，保持您的风格！",
+  "selfieSilverTitle": "银计划 - 今日穿搭",
+  "selfieSilverDescription": "再拍700张今日穿搭，展示您的时尚进步！",
+  "selfieGoldTitle": "金计划 - 今日穿搭",
+  "selfieGoldDescription": "无限今日穿搭！当灵感来临时，随时记录您的造型。",
   "editClosetBronzeTitle": "铜计划 - 编辑衣橱照片",
   "editClosetBronzeDescription": "更新和编辑最多 200 张衣橱照片，保持您的数字衣橱井井有条、时尚有型。",
   "editClosetSilverTitle": "银计划 - 编辑衣橱照片",
@@ -442,7 +442,8 @@
   "analyticsSummary": "你在过去的 {daysTracked} 天里创建了 {totalReviews} 套穿搭在{closetShown}。",
   "summaryItemAnalytics": "物品洞察",
   "summaryOutfitAnalytics": "穿搭洞察",
-  "relatedOutfits": "相关穿搭",
+  "relatedOutfitsToAboveItem": "与上述单品相关的搭配",
+  "relatedOutfitsToAboveOutfit": "与上述穿搭相关的搭配",
   "noRelatedOutfitsItem": "暂无相关穿搭评价。\n\n尝试不同的搭配风格吧！",
   "noRelatedOutfits": "暂无相关穿搭评价。\n\n尝试搭配上方的任何服饰，创造新的穿搭！",
   "createOutfit": "创建搭配",
@@ -521,6 +522,8 @@
   "scenarioTutorials": "场景教程",
   "reminderDialogTitle": "稍后提醒我",
   "reminderDialogContent": "您想让我稍后提醒您上传衣橱吗？",
+  "showMore": "展开更多",
+  "showLess": "收起",
 
   "tutorialFreePhotoLibraryTitle": "从相册上传",
   "tutorialClosetUploadedTitle": "衣橱上传教程",
@@ -542,8 +545,8 @@
   "defaultAchievementFirstItemUploadTitle": "衣物上传先锋！",
   "defaultAchievementFirstOutfitCreatedMessage": "你的第一套穿搭已创建！你正在掌握属于自己的风格。",
   "defaultAchievementFirstOutfitCreatedTitle": "穿搭建筑师！",
-  "defaultAchievementFirstSelfieTakenMessage": "你拍下了第一张自拍！展示你的风格，让你的衣柜闪耀吧！",
-  "defaultAchievementFirstSelfieTakenTitle": "自拍之星！",
+  "defaultAchievementFirstSelfieTakenMessage": "你拍下了第一张今日穿搭！展示你的风格，让你的衣柜闪耀吧！",
+  "defaultAchievementFirstSelfieTakenTitle": "今日穿搭之星！",
   "defaultAchievementNoNewClothes90Message": "你已连续 90 天未添新衣！继续培养这些环保好习惯吧！🌱",
   "defaultAchievementNoNewClothes90Title": "可持续起步！",
   "defaultAchievementNoNewClothes225Message": "坚持 225 天了！你的衣柜在成长，地球也在受益。🌍",
@@ -594,7 +597,7 @@
   "memoryAchievementFirstItemUploadTitle": "回忆守护者！",
   "memoryAchievementFirstOutfitCreatedMessage": "你保存了第一套穿搭——这将成为你永远珍惜的时刻。",
   "memoryAchievementFirstOutfitCreatedTitle": "重要时刻已标记！",
-  "memoryAchievementFirstSelfieTakenMessage": "你拍下了第一张自拍——一张照片留住一个回忆。",
+  "memoryAchievementFirstSelfieTakenMessage": "你拍下了第一张今日穿搭——一张照片留住一个回忆。",
   "memoryAchievementFirstSelfieTakenTitle": "时光定格者！",
   "memoryAchievementNoNewClothes90Message": "90 天珍惜衣橱回忆。每一件穿过的衣服都藏着宝贵故事。",
   "memoryAchievementNoNewClothes90Title": "90 天的珍贵时光！",
@@ -646,7 +649,7 @@
   "personalStyleAchievementFirstItemUploadTitle": "自信开启！",
   "personalStyleAchievementFirstOutfitCreatedMessage": "你的第一套穿搭已完成。随时回顾，让自己焕发光彩。",
   "personalStyleAchievementFirstOutfitCreatedTitle": "标志性穿搭定格！",
-  "personalStyleAchievementFirstSelfieTakenMessage": "第一张自拍已拍下！庆祝你的风格之旅。",
+  "personalStyleAchievementFirstSelfieTakenMessage": "第一张今日穿搭已拍下！庆祝你的风格之旅。",
   "personalStyleAchievementFirstSelfieTakenTitle": "风格由你掌控！",
   "personalStyleAchievementNoNewClothes90Message": "连续 90 天用已有衣物自信穿搭——你的个人风格正在闪耀！",
   "personalStyleAchievementNoNewClothes90Title": "90 天的自信风格！",
@@ -698,7 +701,7 @@
   "lifeChangeAchievementFirstItemUploadTitle": "新篇开启！",
   "lifeChangeAchievementFirstOutfitCreatedMessage": "你的第一套穿搭已记录——迎接全新阶段的完美搭配。",
   "lifeChangeAchievementFirstOutfitCreatedTitle": "转变已记录！",
-  "lifeChangeAchievementFirstSelfieTakenMessage": "你的第一张自拍，见证了此刻——反映你不断变化的故事。",
+  "lifeChangeAchievementFirstSelfieTakenMessage": "你的第一张今日穿搭，见证了此刻——反映你不断变化的故事。",
   "lifeChangeAchievementFirstSelfieTakenTitle": "变化已记录！",
   "lifeChangeAchievementNoNewClothes90Message": "90 天的转变之旅！你的衣柜正在美丽地讲述新生活的故事。",
   "lifeChangeAchievementNoNewClothes90Title": "90 天的蜕变！",
