Resolve most of the issues about notification and different states, to test the paywall in Android in prod and migrate bloc listener out of closet screen

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -216,7 +216,7 @@
   "myOutfitOfTheDay": "My Outfit of the Day",
   "date": "Date",
   "noItemsFound": "No items found.",
-  "styleOn": "Review Outfit",
+  "styleOn": "Confirm Outfit",
   "like": "Love it!\n😍",
   "alright": "Not sure\n🤷‍♀️",
   "dislike": "Not quite\nmy vibe 🤔",
@@ -524,6 +524,7 @@
   "reminderDialogContent": "Would you like me to remind you later to upload your closet?",
   "showMore": "Show More",
   "showLess": "Show Less",
+  "pickingDateAndTime": "Picking date & time…",
 
   "tutorialFreePhotoLibraryTitle": "Upload from Photo Library",
   "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
