Modularize bloc listener and try to ensure exiting of paywall, the user still have to pay.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -427,7 +427,7 @@
   "viewDailyCalendarDescription": "See all details of your outfit for the day, including event name, comments, and feedback.",
   "encourageComment": "You haven’t added a comment for this outfit yet!",
   "startFreeTrial": "Start Free Trial",
-  "usageAnalyticsTitle": "Usage Analytics",
+  "usageAnalyticsTitle": "Closet Analytics",
   "tabItemAnalytics": "Item Analytics",
   "tabOutfitAnalytics": "Outfit Analytics",
   "totalItems": "Total Items",
