--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -427,7 +427,7 @@
   "viewDailyCalendarDescription": "查看当天穿搭的所有详情，包括活动名称、评论和穿搭反馈.",
   "encourageComment": "你还没有为这套搭配添加评论！",
   "startFreeTrial": "开始免费试用",
-  "usageAnalyticsTitle": "使用分析",
+  "usageAnalyticsTitle": "衣橱分析",
   "tabItemAnalytics": "单品分析",
   "tabOutfitAnalytics": "穿搭分析",
   "totalItems": "总单品数",
