Local notification not working, to figure it out in the future. Got QR code presentation working.

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -525,6 +525,7 @@
   "showMore": "Show More",
   "showLess": "Show Less",
   "pickingDateAndTime": "Picking date & time…",
+  "swapDialogTitle": "Scan to Swap",
 
   "tutorialFreePhotoLibraryTitle": "Upload from Photo Library",
   "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
