--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -525,6 +525,7 @@
   "showMore": "展开更多",
   "showLess": "收起",
   "pickingDateAndTime": "正在选择日期和时间…",
+  "swapDialogTitle": "扫描以交换",
 
   "tutorialFreePhotoLibraryTitle": "从相册上传",
   "tutorialClosetUploadedTitle": "衣橱上传教程",
