Update the QR scanner. Test in Prod

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -526,6 +526,9 @@
   "showLess": "Show Less",
   "pickingDateAndTime": "Picking date & time…",
   "swapDialogTitle": "Scan to Swap",
+  "scanToReceiveItem": "Scan to Receive Item",
+  "transferFailed": "Transfer failed. Please try again.",
+  "qrScanner": "QR Scanner",
 
   "tutorialFreePhotoLibraryTitle": "Upload from Photo Library",
   "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
