Standardize the achievement wrapper and also moved all the grid to utilize pagination library

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -323,9 +323,10 @@
   "update_required_content": "We’ve made some improvements you’ll love! Update now to keep your wardrobe fresh and sustainable.",
   "update_button_text": "Let’s Do It!",
   "failedToSaveOutfit": "Failed to save outfit. Please try again.",
-  "gridSize3": "3 items per row",
-  "gridSize5": "5 items per row",
-  "gridSize7": "7 items per row",
+  "gridSize2": "2 items\nper row",
+  "gridSize3": "3 items\nper row",
+  "gridSize5": "5 items\nper row",
+  "gridSize7": "7 items\nper row",
   "updatedAt": "Updated At",
   "createdAt": "Created At",
   "amountSpent": "Amount Spent",
