--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -323,9 +323,10 @@
   "update_required_content": "我们做了一些您会喜欢的改进！ 立即更新，让您的衣橱保持新鲜和可持续性。",
   "update_button_text": "马上行动！",
   "failedToSaveOutfit": "保存搭配失败，请重试。",
-  "gridSize3": "每行3个项目",
-  "gridSize5": "每行5个项目",
-  "gridSize7": "每行7个项目",
+  "gridSize2": "每行2\n个项目",
+  "gridSize3": "每行3\n个项目",
+  "gridSize5": "每行5\n个项目",
+  "gridSize7": "每行7\n个项目",
   "updatedAt": "更新时间",
   "createdAt": "创建时间",
   "amountSpent": "花费金额",
