Last Commit to shut down Closet Conscious

--- a/lib/l10n/intl_en.arb
+++ b/lib/l10n/intl_en.arb
@@ -530,6 +530,14 @@
   "scanToReceiveItem": "Scan to Receive Item",
   "transferFailed": "Transfer failed. Please try again.",
   "qrScanner": "QR Scanner",
+  "outfitLottery": "Lottery",
+  "outfitLotteryResult": "Outfit Result",
+  "outfitLotteryTitle": "Your Style Match",
+  "generateOutfit": "Generate Outfit",
+  "suggestionsTitle": "Suggestions to improve your outfit",
+  "suggestionSingle": "Try uploading a {item} for .",
+  "suggestionDouble": "Try uploading a {item1} and a {item2} for your winter outfits.",
+  "suggestionMultiple": "Try uploading {items} and {lastItem} for your winter outfits.",
 
   "tutorialFreePhotoLibraryTitle": "Upload from Photo Library",
   "tutorialClosetUploadedTitle": "Closet Upload Tutorial",
