--- a/lib/l10n/intl_zh_CN.arb
+++ b/lib/l10n/intl_zh_CN.arb
@@ -530,6 +530,14 @@
   "scanToReceiveItem": "扫描以接收物品",
   "transferFailed": "转移失败，请再试一次。",
   "qrScanner": "二维码扫描器",
+  "outfitLottery": "穿搭抽奖",
+  "outfitLotteryResult": "穿搭结果",
+  "outfitLotteryTitle": "你的风格匹配",
+  "generateOutfit": "生成穿搭",
+  "suggestionsTitle": "提升冬季穿搭建议",
+  "suggestionSingle": "你可以上传一件{item}来完善你的冬季穿搭。",
+  "suggestionDouble": "你可以上传{item1}和{item2}来完善你的冬季穿搭。",
+  "suggestionMultiple": "你可以上传{items}和{lastItem}来完善你的冬季穿搭。",
 
   "tutorialFreePhotoLibraryTitle": "从相册上传",
   "tutorialClosetUploadedTitle": "衣橱上传教程",
